# Diagram Aplikasi Koperasi — Mermaid (Bahasa Indonesia)

File ini berisi diagram Mermaid yang menggambarkan alur utama aplikasi, use case untuk aktor Kasir dan Owner, serta diagram kelas sederhana untuk model inti.

---

```mermaid
flowchart TD
  %% Alur umum aplikasi (Bahasa Indonesia)
  Mulai([Mulai]) --> CekLogin{Sudah login?}
  CekLogin -- Tidak --> HalamanLogin[Halaman Login]
  HalamanLogin --> CekLogin
  CekLogin -- Ya --> Dashboard[Dashboard]

  Dashboard --> AlurKasir[Alur: Kasir]
  Dashboard --> AlurOwner[Alur: Owner]

  %% Subgraph untuk Alur Kasir (penjualan)
  subgraph KasirFlow [Alur Kasir]
    KasirMulai([Mulai Penjualan]) --> CariBarang[Cari / Pilih Barang]
    CariBarang --> CekStok{Stok tersedia?}
    CekStok -- Ya --> TambahKeranjang[Tambahkan ke Keranjang]
    CekStok -- Tidak --> NotifHabis[Tampilkan 'Habis' / Peringatan]
    TambahKeranjang --> Checkout[Bayar / Selesaikan Penjualan]
    Checkout --> CetakNota[Cetak Nota]
    CetakNota --> UpdateStok[Perbarui stok & total]
    UpdateStok --> Selesai([Selesai])
  end

  %% Subgraph untuk Alur Owner (manajemen dan laporan)
  subgraph OwnerFlow [Alur Owner]
    OwnerMulai([Manajemen Master]) --> KelolaBarang[Kelola Barang (CRUD)]
    OwnerMulai --> KelolaKategori[Kelola Kategori]
    OwnerMulai --> KelolaUser[Kelola Pengguna]
    OwnerMulai --> LihatLaporan[Lihat Laporan & Omzet]
    LihatLaporan --> ExportPDF[Cetak / Export Laporan]
  end

  Dashboard --- KasirMulai
  Dashboard --- OwnerMulai
```

---

```mermaid
%% Use case diagram (Bahasa Indonesia) — aktor Kasir, Owner, Pengunjung
actor Kasir as "Kasir"
actor Owner as "Owner"
actor Pengunjung as "Pengunjung"

Kasir --> (Login)
Kasir --> (Buat Penjualan)
Kasir --> (Cetak Nota)
Kasir --> (Lihat Dashboard)

Owner --> (Login)
Owner --> (Kelola Barang)
Owner --> (Kelola Kategori)
Owner --> (Kelola Pengguna)
Owner --> (Lihat Laporan)
Owner --> (Konfigurasi Sistem)

Pengunjung --> (Login)
Pengunjung --> (Lihat Informasi Publik)

note right of Owner: Owner memiliki hak penuh untuk
mengelola data master, melihat laporan, dan mengatur
setting aplikasi.
```

---

```mermaid
classDiagram
  %% Diagram kelas sederhana (Bahasa Indonesia)
  class Barang {
    +int id
    +string nama_barang
    +int stok
    +decimal harga_beli
    +decimal harga_jual
    +int kategori_id
    +ambilSemua()
    +ambilById(id)
    +buat(data)
    +perbarui(id,data)
    +softDelete(id)
  }

  class Kategori {
    +int id
    +string nama_kategori
    +ambilSemua()
  }

  class Penjualan {
    +int id
    +datetime tanggal
    +decimal total
    +int user_id
    +buat(data)
    +ambilByTanggal(range)
  }

  class DetailPenjualan {
    +int id
    +int penjualan_id
    +int barang_id
    +int qty
    +decimal subtotal
  }

  class Pembelian {
    +int id
    +datetime tanggal
    +decimal total
    +buat(data)
  }

  class DetailPembelian {
    +int id
    +int pembelian_id
    +int barang_id
    +int qty
    +decimal subtotal
  }

  class User {
    +int id
    +string username
    +string password_hash
    +string role
    +autentikasi()
  }

  %% Relasi
  Penjualan "1" --> "*" DetailPenjualan : berisi
  Pembelian "1" --> "*" DetailPembelian : berisi
  Barang "1" <-- "*" DetailPenjualan : direferensi_oleh
  Barang "1" <-- "*" DetailPembelian : direferensi_oleh
  Kategori "1" <-- "*" Barang : mengkategorikan
  User "1" <-- "*" Penjualan : dibuat_oleh

  note for DetailPenjualan "FK: penjualan_id -> penjualan.id\n FK: barang_id -> barang.id"
  note for DetailPembelian "FK: pembelian_id -> pembelian.id\n FK: barang_id -> barang.id"
```

---

Catatan:
- Untuk menampilkan diagram, buka file ini di VS Code dengan ekstensi Mermaid Preview atau tempel ke https://mermaid.live.
- Bila ingin file terpisah (satu diagram per file) atau ingin saya mengekspor PNG/SVG ke folder `docs/`, katakan saja — saya bisa mengekspor dan menambahkan hasilnya ke repo.


